# copilot-pulse

./: .env.example  .gitignore  README.md  pyproject.toml
src/: calculate_maturity.py  config.py  main.py  match_github_ids.py
src/agent/: data_analyzer.py  intent_parser.py  llm_provider.py  orchestrator.py  query_planner.py  response_composer.py  tools_schema.py
src/agent/providers/: __init__.py  anthropic_provider.py  github_copilot_provider.py  schema_converter.py
src/cache/: store.py
src/github_client/: __init__.py  auth.py  base_client.py  metrics_api.py  models.py  usage_metrics_api.py  user_management_api.py
src/orgdata/: __init__.py  database.py  loader.py  models.py  registry.py
src/reports/: chart_engine.py  export_engine.py  terminal_renderer.py  web_dashboard.py
src/web/: i18n.py
src/web/static/css/: dashboard.css
src/web/static/js/: app.js
src/web/templates/: ai-maturity-radar.html  base.html  dashboard.html  report.html  settings.html  setup.html
tests/: conftest.py  test_agent.py  test_auth.py  test_database.py  test_github_client.py  test_orgdata.py  test_providers.py  test_reports.py  test_web_dashboard.py
tests/fixtures/: metrics_response.json  seats_response.json  usage_metrics_response.json  user_metrics_ndjson.txt
